--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.34.0",
+    "@radix-ui/react-hover-card": "^1.1.15",
+    "@radix-ui/themes": "^3.2.1",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "next": "15.5.4",
