--- a/personal-docs/Setup-Guide/.env.example
+++ b/personal-docs/Setup-Guide/.env.example
@@ -9,3 +9,5 @@ NEXT_PUBLIC_CLERK_SIGN_UP_URL=
 
 NEXT_PUBLIC_CLERK_SIGN_IN_FORCE_REDIRECT_URL=
 NEXT_PUBLIC_CLERK_SIGN_UP_FORCE_REDIRECT_URL=
+
+NEXT_PUBLIC_BASE_URL=
